CSS Day 1 class

--- a/Day 1/internal.html
+++ b/Day 1/internal.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="background-color: aqua;">Gym Website</h1>
+    <h1>Gym Website</h1>
     <h2 style="background-color: bisque;">Exercises</h2>
     <ul>
         <li>Biceps</li>
