--- a/Day 1/internal.html
+++ b/Day 1/internal.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Gym Website</h1>
-    <h2 style="background-color: bisque;">Exercises</h2>
+    <h2>Exercises</h2>
     <ul>
         <li>Biceps</li>
         <li>Legs</li>
