--- a/Day 3/first.html
+++ b/Day 3/first.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="styler.css">
 </head>
 <body>
-    <h1 class="classA" id="firstId">Hello Coder Army</h1>
+    <h1>Hello Coder Army</h1>
     <h2>Strike is coming soon</h2>
 </body>
 </html>
