--- a/Day 3/first.html
+++ b/Day 3/first.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Hello Coder Army</h1>
     <h2>Strike is coming soon</h2>
+    <h3>I am the navigation bar</h3>
+    <h4>I am best in the world</h4>
 </body>
 </html>
