CSS Day 1 class

--- a/Day 3/first.html
+++ b/Day 3/first.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hello Coder Army</h1>
     <h2>Strike is coming soon</h2>
+    <p>I am absolute item</p>
     <h3>I am the navigation bar</h3>
     <h4>I am best in the world</h4>
 </body>
